# duckdb-flock

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  HANDOFF.md  LICENSE  Makefile  README.md  SPEC.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml  architecture-guard.yml
deploy/: Dockerfile  README.md  docker-compose.yml  harbor-bootstrap-docker.sql  harbor-bootstrap.sql  harbor.service
docs/: DEPLOYMENT.md  WHY_HARBOR.md  upstream-quack-patches.md  upstream-ui-patches.md
examples/auth/: README.md  bearer-only-static.sql  bearer-table-multi-tenant.sql  bearer-with-expiry.sql  rbac-authorization.sql
scripts/: golden-admin-roundtrip.sh  golden-cookie-auth.sh  golden-localdev-sse.sh  golden-query-timeout.sh  golden-sql-roundtrip.sh  golden-sql-types.sh  load-test.sh  validate-deployment.sh
src/: CMakeLists.txt  admin_handlers.cpp  auth_handlers.cpp  flock_auth.cpp  flock_crypto.cpp  flock_extension.cpp  flock_http_server.cpp  flock_lifecycle.cpp  flock_session.cpp  harbor_auth.cpp  harbor_crypto.cpp  harbor_extension.cpp  harbor_http_server.cpp  harbor_lifecycle.cpp  harbor_query_timeout.cpp  harbor_session.cpp  sql_chunk_encoder.cpp  sql_handlers.cpp  sql_json_writer.cpp  sql_param_decoder.cpp
src/include/: admin_handlers.hpp  auth_handlers.hpp  flock_auth.hpp  flock_crypto.hpp  flock_extension.hpp  flock_http_server.hpp  flock_lifecycle.hpp  flock_session.hpp  harbor_auth.hpp  harbor_crypto.hpp  harbor_extension.hpp  harbor_http_server.hpp  harbor_lifecycle.hpp  harbor_query_timeout.hpp  harbor_session.hpp  sql_chunk_encoder.hpp  sql_handlers.hpp  sql_json_writer.hpp  sql_param_decoder.hpp
src/quack/: CMakeLists.txt  quack_clear_cache.cpp  quack_client.cpp  quack_extension.cpp  quack_http_server.cpp  quack_log.cpp  quack_message.cpp  quack_scan.cpp  quack_server.cpp  quack_start_stop.cpp  quack_storage.cpp  quack_uri.cpp  serialize_quack_message.cpp
src/quack/include/: flock_extension.hpp  quack_clear_cache.hpp  quack_client.hpp  quack_extension.hpp  quack_log.hpp  quack_message.hpp  quack_message.json  quack_scan.hpp  quack_server.hpp  quack_startstop.hpp  quack_storage.hpp  quack_uri.hpp
src/quack/include/storage/: quack_catalog.hpp  quack_catalog_set.hpp  quack_insert.hpp  quack_optimizer.hpp  quack_schema.hpp  quack_table.hpp  quack_transaction.hpp  quack_transaction_manager.hpp  quack_view.hpp
src/quack/storage/: CMakeLists.txt  quack_catalog.cpp  quack_catalog_set.cpp  quack_insert.cpp  quack_optimizer.cpp  quack_schema.cpp  quack_table.cpp  quack_transaction.cpp  quack_transaction_manager.cpp  quack_view.cpp
src/ui/: http_server.cpp  settings.cpp  state.cpp  ui_extension.cpp  ui_handlers.cpp  watcher.cpp
src/ui/include/: http_server.hpp  ui_handlers.hpp  version.hpp  watcher.hpp
src/ui/include/utils/: helpers.hpp
src/ui/utils/: encoding.cpp
test/sql/: flock.test  harbor.test
